--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p>Give rights</p>
                     <input type="email" class="form-control form-control-md w-75 mb-4" placeholder="test@test.com"/>
                 </div>
-                <div id="menu1Open" style="display: none; margin-left: 30px; margin-right: 60px;">
+                <div id="menu1Open" style="display: none; margin-left: 30px;">
                     <p>Open project</p>
                     <div class="card-deck mb-4">
                         <div class="project">
@@ -175,7 +175,7 @@
                                     <p>Color</p>
                                     <div class="form-group row">
                                         <form>
-                                            <input type="color" value="#000000" id="favcolor" list="colorList" style="width: 90px; height: 23px;">
+                                            <input type="color" value="#000000" id="favcolor" list="colorList" style="width: 50px; height: 23px;">
                                             <datalist id="colorList">
                                                 <option value="#ffffff" label="White">
                                                 <option value="#000000" label="Black">
@@ -198,7 +198,7 @@
                                     <p>Align</p>
                                     <div class="btn-group btn-group-toggle h-25 w-50" data-toggle="buttons">
                                         <label class="btn btn-light btn-sm border p-0">
-                                            <input type="radio" name="options" id="option1" checked><img src="img/Menu4-1-map-aligin-left-no-bordure.svg">
+                                            <input type="radio" name="options" id="option1"><img src="img/Menu4-1-map-aligin-left-no-bordure.svg">
                                         </label>
                                         <label class="btn btn-light btn-sm border p-0">
                                             <input type="radio" name="options" id="option2"> <img src="img/Menu4-1-map-aligin-center-no-bordure.svg">
@@ -219,7 +219,7 @@
                                     <div class="form-group row mr-3 mb-0">
                                         <div class="form-group row">
                                             <form>
-                                                <input type="color" value="#000000" id="favcolor1" list="colorList" style="width: 90px; height: 23px;">
+                                                <input type="color" value="#000000" id="favcolor1" list="colorList" style="width: 50px; height: 23px;">
                                                 <datalist id="colorList">
                                                     <option value="#ffffff" label="White">
                                                     <option value="#000000" label="Black">
@@ -243,7 +243,7 @@
                                     <p>Border color</p>
                                     <div class="form-group row">
                                         <form>
-                                            <input type="color" value="#000000" id="favcolor2" list="colorList" style="width: 90px; height: 23px;">
+                                            <input type="color" value="#000000" id="favcolor2" list="colorList" style="width: 50px; height: 23px;">
                                             <datalist id="colorList">
                                                 <option value="#ffffff" label="White">
                                                 <option value="#000000" label="Black">
@@ -281,7 +281,7 @@
                                     <p>Color</p>
                                     <div class="form-group row">
                                         <form>
-                                            <input type="color" value="#000000" id="favcolor3" list="colorList" style="width: 90px; height: 23px;">
+                                            <input type="color" value="#000000" id="favcolor3" list="colorList" style="width: 50px; height: 23px;">
                                             <datalist id="colorList">
                                                 <option value="#ffffff" label="White">
                                                 <option value="#000000" label="Black">
@@ -324,7 +324,7 @@
                                     <p>Align</p>
                                     <div class="btn-group btn-group-toggle h-25 w-50" data-toggle="buttons">
                                         <label class="btn btn-light btn-sm border p-0 active">
-                                            <input type="radio" name="options" id="option1" checked><img src="img/Menu4-4-image-aligin-left-no-bordure.svg">
+                                            <input type="radio" name="options" id="option1"><img src="img/Menu4-4-image-aligin-left-no-bordure.svg">
                                         </label>
                                         <label class="btn btn-light btn-sm border p-0">
                                             <input type="radio" name="options" id="option2"> <img src="img/Menu4-4-image-aligin-center-no-bordure.svg">
@@ -334,13 +334,24 @@
                                         </label>
                                     </div>
                                 </div>
+                                <div class="d-flex flex-row justify-content-between ml-3 mr-3">
+                                    <p>Load image</p>
+                                    <div class="btn-group btn-group-toggle h-25 w-25 mr-4" data-toggle="buttons">
+                                        <label class="btn btn-light btn-sm border p-0 active">
+                                            <input type="radio" name="options" id="option1"><img src="other/Menu4/Menu4-4/SVG/No-bordure/Menu4-4-image-open-load-no-bordure.svg">
+                                        </label>
+                                        <label class="btn btn-light btn-sm border p-0">
+                                            <input type="radio" name="options" id="option2"> <img src="other/Menu4/Menu4-4/SVG/No-bordure/Menu4-4-image-open-url-no-bordure.svg">
+                                        </label>
+                                    </div>
+                                </div>
                             </div>
                             <div class="tab-pane fade" id="five" role="tabpanel" aria-labelledby="contact-tab">
                                 <div class="d-flex flex-row justify-content-between ml-3 mr-3 mt-3">
                                     <p>Color</p>
                                     <div class="form-group row">
                                         <form>
-                                            <input type="color" value="#000000" id="favcolor4" list="colorList" style="width: 90px; height: 23px;">
+                                            <input type="color" value="#000000" id="favcolor4" list="colorList" style="width: 50px; height: 23px;">
                                             <datalist id="colorList">
                                                 <option value="#ffffff" label="White">
                                                 <option value="#000000" label="Black">
@@ -363,7 +374,7 @@
                                     <p>Align g.</p>
                                     <div class="btn-group btn-group-toggle h-25 w-50" data-toggle="buttons">
                                         <label class="btn btn-light btn-sm border p-0 active">
-                                            <input type="radio" name="options" id="option1" checked> <img src="img/Menu4-5-text-aligin-left-no-bordure.svg">
+                                            <input type="radio" name="options" id="option1"> <img src="img/Menu4-5-text-aligin-left-no-bordure.svg">
                                         </label>
                                         <label class="btn btn-light btn-sm border p-0">
                                             <input type="radio" name="options" id="option2"> <img src="img/Menu4-5-text-aligin-center-no-bordure.svg">
@@ -377,7 +388,7 @@
                                     <p>Align h.</p>
                                     <div class="btn-group btn-group-toggle h-25 w-50" data-toggle="buttons">
                                         <label class="btn btn-light btn-sm border p-0 active">
-                                            <input type="radio" name="options" id="option1" checked> <img src="img/Menu4-5-text-aligin-bott-no-bordure.svg">
+                                            <input type="radio" name="options" id="option1"> <img src="img/Menu4-5-text-aligin-bott-no-bordure.svg">
                                         </label>
                                         <label class="btn btn-light btn-sm border p-0">
                                             <input type="radio" name="options" id="option2"> <img src="img/Menu4-5-text-aligin-mid-no-bordure.svg">
@@ -391,7 +402,7 @@
                                     <p>Type</p>
                                     <div class="btn-group btn-group-toggle h-25 w-50" data-toggle="buttons">
                                         <label class="btn btn-light btn-sm border p-0 active">
-                                            <input type="radio" name="options" id="option1" checked> <img src="img/Menu4-5-text-bold-no-bordure.svg">
+                                            <input type="radio" name="options" id="option1"> <img src="img/Menu4-5-text-bold-no-bordure.svg">
                                         </label>
                                         <label class="btn btn-light btn-sm border p-0">
                                             <input type="radio" name="options" id="option2"> <img src="img/Menu4-5-text-italic-no-bordure.svg">
