--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
                 </svg>
         </button>
       </div>
-      <a href="#" class="font-weight-bold" style="color: black;text-decoration: underline; font-size: 15px;">Lost your password?</a>
+      <a href="#" class="font-weight-bold" style="color: black;text-decoration: underline; font-size: 15px;" data-toggle="modal" data-target="#forgotPasswordModal">Lost your password?</a>
 
       <hr>
 
@@ -47,6 +47,22 @@
       <label for="inputPassword" class="sr-only">Password</label>
       <input type="password" id="inputPassword" class="form-control" placeholder="Password">
       <button class="btn btn-lg btn-block" id="loginBtn" type="submit">Registration</button>
+
+      <div class="modal fade" id="forgotPasswordModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+              <button type="button" class="close ml-0 pl-3 pt-2 mr-auto" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            <div class="modal-body pr-5">
+              <h3 class="pl-4">Lost your password?</h3>
+              <input type="email"  id="inputEmail" class="form-control ml-3 mt-4" placeholder="Email">
+              <p class="ml-3 mt-3">Please, enter your email adress. You will receive a link to create a new password via email.</p>
+              <button class="btn btn-lg btn-block ml-3" id="loginBtn" type="submit">Reset password</button>
+            </div>
+          </div>
+        </div>
+      </div>
       </form>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
