login page fix, new file manager

--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
               <h3 class="pl-4">Lost your password?</h3>
               <input type="email"  id="inputEmail" class="form-control ml-3 mt-4" placeholder="Email">
               <p class="ml-3 mt-3">Please, enter your email adress. You will receive a link to create a new password via email.</p>
-              <button class="btn btn-lg btn-block ml-3" id="loginBtn" type="submit">Reset password</button>
+              <button class="btn btn-lg btn-block ml-3 mb-1" id="loginBtn" type="submit">Reset password</button>
             </div>
           </div>
         </div>
